--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 Heart Of Harrisonburg was established in 2009 <br>
                 We have aided travlerers in making the most out of their experiences made in Harrisonburg Virginia and strive to continue doing so. 
                 <br>
-                 Our Team of Online Tourist Guides is happy to answer any questions through email at <a href="mailto:heartofharrisonburg@gmail.com" class="non-nav-link">heartofharrisonburg@gmail.com</a>
+                 Our Team of Online Tourist Guides are happy to answer any questions through email at <a href="mailto:heartofharrisonburg@gmail.com" class="non-nav-link">heartofharrisonburg@gmail.com</a>
                 </p>
             </footer>
         </div>
